Afbeeldingen en extra HTML pagina's toegevoegd

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,32 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
 </head>
+
 <body>
-    <!-- hearder -->
   <header>
-    <div>
     <h1>Portfolio</h1>
-   <!-- Navigatie -->
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="winkel.html">Winkel</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>   
+            </ul>
         </nav>
   </header>
+
 <main>
-    <h2>Welkom!</h2>
-    <p>Hallo, welkom op de contact page</p>
+   
+    <article class="project">  
+        <a href="project1.html" class="a-portfolio">
+            <img src="img/portfolio/bw-book.png" alt="bw-book"> 
+        </a>
+    </article>
+
+    <article class="project">  
+        <a href="eye-candy.html" class="a-portfolio">
+            <img src="img/portfolio/eye-candy.png" alt="eye-candy-project"> 
+        </a>
+    </article>
+
+    <article class="project">  
+        <a href="hond-poster.html" class="a-portfolio">
+            <img src="img/portfolio/hond-poster.png" alt="hond-poster"> 
+        </a>
+    </article>
+
+    <article class="project">  
+        <a href="boobrandbuilders.html" class="a-portfolio">
+            <img src="img/portfolio/boo-brand-builders.png" alt="stageverslag-Boo!brandbuilders"> 
+        </a>
+    </article>
+
+    <article class="project">  
+        <a href="ding.html" class="a-portfolio">
+            <img src="img/ding/ding-cover.png" alt="ding"> 
+        </a>
+    </article>
+
+
+    <article class="project">  
+        <a href="letters.html" class="a-portfolio">
+            <img src="img/letters/cover-letter.png" alt="weekelijkse-letters"> 
+        </a>
+    </article>
+
 </main>
+
 <footer>
-    <p>Copywrite - Maaike Schoute</p>
+    <p>Copyright - Maaike Schoute</p>
 </footer>
-</div>
 
 </body>
 </html>
