Animatie circle, interactieve Portfolio, footer verplaats naar de bottom op de home page, en met flexbox op de andere pagina's.

--- a/ding.html
+++ b/ding.html
@@ -9,7 +9,7 @@
     <title>Ding</title>
 </head>
 <body>
-    <!-- hearder -->
+    <!-- header -->
   <header>
    <!-- Navigatie -->
         <nav>
