--- a/hond-poster.html
+++ b/hond-poster.html
@@ -9,7 +9,7 @@
     <title>Hond-Poster</title>
 </head>
 <body>
-    <!-- hearder -->
+    <!-- header -->
   <header>
    <!-- Navigatie -->
         <nav>
