--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
                 </ul>   
             </nav>    
     </header>
-    <main>
-        <div class="circle">
-        <h1>Maaike Schoute</h1>
-        <p>Ik ben een student op de HVA voor communicatie en Miltimedia Design. 
-            Hierin staan wat werkjes van deze, en vorige opleidingen! </p>
-        </div>    
+
+    <main id="home">
+            <div class="circle">
+                <h1>Maaike Schoute</h1>
+                <p>Ik ben een student op de HVA voor communicatie en Miltimedia Design. 
+                    Hierin staan wat werkjes van deze, en vorige opleidingen! </p>
+            </div>    
     </main>
     
 <footer>
