--- a/letters.html
+++ b/letters.html
@@ -9,9 +9,8 @@
     <title>Letter</title>
 </head>
 <body>
-    <!-- hearder -->
+    <!-- header -->
   <header>
-    <h2>Menu</h2>
    <!-- Navigatie -->
         <nav>
             <ul>
