--- a/project1.html
+++ b/project1.html
@@ -9,7 +9,7 @@
     <title>The Letter S</title>
 </head>
 <body>
-    <!-- hearder -->
+    <!-- header -->
   <header>
     <h2>Project 1
     </h2>
