cleaning up code

--- a/boobrandbuilders.html
+++ b/boobrandbuilders.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Boo!Branduilders Stage verslag</title>
 </head>
 <body>
-    <!-- header -->
   <header>
-   <!-- Navigatie -->
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -20,7 +18,7 @@
             </ul>   
         </nav>
   </header>
-<main>
+    <main>
     <article>
         <div class="tekst-container">
             <h1>Boo!brandbuilders</h1>
@@ -62,13 +60,11 @@
             <img src="img/boobrandbuilders/32.png" alt="boobrand-Conclusie verslag">
             <img src="img/boobrandbuilders/33.png" alt="boobrand-Behaalde en niet behaalde doelen + slotwoord">
             <img src="img/boobrandbuilders/34.png" alt="boobrand-Eind-schatkaart">
-    </div>    
+        </div>    
     </article>
 </main>
-
 <footer>
     <p>Copyright - Maaike Schoute</p>
 </footer>
-
 </body>
 </html>
