--- a/letters.html
+++ b/letters.html
@@ -4,30 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Letter</title>
 </head>
 <body>
-    <!-- header -->
-  <header>
-   <!-- Navigatie -->
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="winkel.html">Winkel</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-            </ul>   
-        </nav>
-  </header>
+    <header>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="winkel.html">Winkel</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                </ul>   
+            </nav>
+    </header>
 <main>
     <article>
-        <section class="tekst-container">
+        <div class="tekst-container"> 
             <h1>Letters</h1>
             <p>Een van de opdrachten was om elke week een moeilijk woord uit te kiezen. De eerte week begonnen we met de letter A, 
                 de tweede week met de letter B etc. Hier zijn een paar letters van dit alfabtet.
              </p>
-         </section>
+            </div>
         <section class="container">
              <img src="img/letters/letter-c.png" alt="zand en schelpen letter c">
             <img src="img/letters/letter-e.png" alt="letter e">
