placed everything back to the right place. So there is a background again. Img are smaller, standing next to each other in portfolio. Code cleaned up

--- a/boobrandbuilders.html
+++ b/boobrandbuilders.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Boo!Branduilders Stage verslag</title>
 </head>
@@ -19,14 +17,14 @@
         </nav>
   </header>
     <main>
-    <article>
+    <div class="achtergrond">
         <div class="tekst-container">
             <h1>Boo!brandbuilders</h1>
             <p>Dit was mijn stage verslag in het derde jaar van het Media college. In het tweede halfjaar van het derde jaar, heb ik stagegelopen bij Boo!branduilders in Wormer. Hier heb ik veel geleerd over photoshop en Wordpress. Veel leuke nieuwe mensen leren kennen en een goede ervaring eropna gehouden!
              </p>
         </div>
         <div class="container">
-            <img src="img/boobrandbuilders/00cover.png" alt="boobrand-cover" class="cover-img">
+            <img src="img/boobrandbuilders/00cover.png" alt="boobrand-cover">
             <img src="img/boobrandbuilders/02.png" alt="boobrand-cover">
             <img src="img/boobrandbuilders/03.png" alt="boobrand-inleiding, schatkaart">
             <img src="img/boobrandbuilders/04.png" alt="boobrand-voorwoord">
@@ -61,7 +59,7 @@
             <img src="img/boobrandbuilders/33.png" alt="boobrand-Behaalde en niet behaalde doelen + slotwoord">
             <img src="img/boobrandbuilders/34.png" alt="boobrand-Eind-schatkaart">
         </div>    
-    </article>
+    </div>
 </main>
 <footer>
     <p>Copyright - Maaike Schoute</p>
