--- a/hond-poster.html
+++ b/hond-poster.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Hond-Poster</title>
 </head>
@@ -19,14 +17,14 @@
         </nav>
   </header>
 <main>
-    <article>
+    <div class="achtergrond">
         <div class="tekst-container">
             <h1>Hond Poster</h1>
             <p>Deze poster is gemaakt met alle letters en schetsen die gemaakt zijn in het project van <strong>Letter S</strong>. 
                 Hieruit kwam deze poster. ik heb er een gifje van gemaakt, zodat je kunt zien op welke manier deze is in en uitgevouwen.
         </div>
             <img src="img/hond-poster/gif-hond-poster.gif" alt="hond-poster-gif">
-    </article>
+    </div>
 </main>
 <footer>
     <p>Copyright - Maaike Schoute</p>
