--- a/project1.html
+++ b/project1.html
@@ -3,17 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>The Letter S</title>
 </head>
 <body>
-    <!-- header -->
   <header>
-    <h2>Project 1
-    </h2>
-   <!-- Navigatie -->
+    <h2>Project 1</h2>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -23,14 +18,13 @@
         </nav>
   </header>
 <main>
-    <article>
+    <div class="achtergrond">
         <div class="tekst-container">
             <h1>The Letter S</h1>
             <p>Hallo! Deze pagina gaat over het project waarbij we een 
                klasse boek hebben gemaakt van al onze eigen letters!</p>
         </div>
         <div class="container">
-            <img src="img/letter-bw/00cover.png" alt="cover-letterboek">
             <img src="img/letter-bw/01.png" alt="1ste spread letterboek">
             <img src="img/letter-bw/02.png" alt="2de spread letterboek">
             <img src="img/letter-bw/03.png" alt="3de spread letterboek">
@@ -47,9 +41,8 @@
             <img src="img/letter-bw/14.png" alt="14e spread letterboekk">
             <img src="img/letter-bw/15.png" alt="15e spread letterboek">
             <img src="img/letter-bw/16.png" alt="16de spread letterboek">
-            <img src="img/letter-bw/17-backcover.png" alt="17de spread letterboek">
         </div>
-    </article>
+    </divs>
 </main>
 
 <footer>
