--- a/letters.html
+++ b/letters.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Letter</title>
 </head>
@@ -19,7 +17,7 @@
             </nav>
     </header>
 <main>
-    <article>
+    <div class="achtergrond">
         <div class="tekst-container"> 
             <h1>Letters</h1>
             <p>Een van de opdrachten was om elke week een moeilijk woord uit te kiezen. De eerte week begonnen we met de letter A, 
@@ -27,12 +25,14 @@
              </p>
             </div>
         <section class="container">
+            <h2>
+            </h2>
              <img src="img/letters/letter-c.png" alt="zand en schelpen letter c">
             <img src="img/letters/letter-e.png" alt="letter e">
             <img src="img/letters/letter-f.png" alt="letter f">
             <img src="img/letters/Letter-g.png" alt="letter g">
         </section>    
-    </article>
+    </div>
 </main>
 
 <footer>
