--- a/portfolio.html
+++ b/portfolio.html
@@ -3,9 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
 </head>
@@ -22,8 +19,7 @@
         </nav>
   </header>
 
-<main>
-   
+<main> 
     <article class="project">  
         <a href="project1.html" class="a-portfolio">
             <div class="img-overlay">
@@ -43,8 +39,8 @@
     <article class="project">  
         <a href="hond-poster.html" class="a-portfolio">
             <div class="img-overlay">
-                <img src="img/portfolio/hond-poster.png" alt="hond-poster"> 
-            <div>
+                <img src="img/portfolio/hond-poster.png" alt="hond-poster">
+            </div>  
         </a>
     </article>
 
