--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </ul>   
         </nav>    
     </header>
-    <main id="home">
+    <main class="home">
         <div class="circle">
             <h1>Maaike Schoute</h1>
             <p>Ik ben een student op de HVA voor communicatie en Miltimedia Design. 
