--- a/project1.html
+++ b/project1.html
@@ -42,9 +42,8 @@
             <img src="img/letter-bw/15.png" alt="15e spread letterboek">
             <img src="img/letter-bw/16.png" alt="16de spread letterboek">
         </div>
-    </divs>
+    </div>
 </main>
-
 <footer>
     <p>Copyright - Maaike Schoute</p>
 </footer>
