--- a/hond-poster.html
+++ b/hond-poster.html
@@ -16,7 +16,7 @@
         </ul>   
     </nav>
 </header>
-<main>
+<main class="home">
     <div class="achtergrond">
         <div class="tekst-container">
             <h1>Hond Poster</h1>
