responsive voor mobiel

--- a/eye-candy.html
+++ b/eye-candy.html
@@ -25,7 +25,7 @@
                 Hetzelfde geld voor koken. Als iets superlekker smaakt, maar de kleur en vorm van het gerecht ziet er niet uit, zullen mensen er niet naar uitkijken om het gerecht te proberen.
                 Wij (Britt Schwart, Maaike Schoute) waren geïteresseerd in dit aspect van koken en besloten om deze theorie om te draaien.
                 Wat als de kleuren en vormen en goed uitzien, maar gek smaken? Zouden mensen het nogsteeds willen eten?
-            </p>Zullen mensen het proeven? Zullen mensen honger of trek krijgen bij het zien van dit eten?
+                Zullen mensen het proeven? Zullen mensen honger of trek krijgen bij het zien van dit eten?</p>
             <p> Tijdens de eerste week van dit project, zijn we langs de Action gegaan om niet-eetbare materialen te verzalen voor onze 'cupcakes'.
                 Een week later zijn we naar de supermarkt gegaan om eetbare materialen te verzamelen. Met deze combinatie van eetbare, en niet eetbare materialen maakten we super lekker uitziende gerechten, met een super vieze smaak.
             </p>
