--- a/hond-poster.html
+++ b/hond-poster.html
@@ -16,14 +16,16 @@
         </ul>   
     </nav>
 </header>
-<main class="home">
+<main class="one-img-page"> 
     <div class="achtergrond">
         <div class="tekst-container">
             <h1>Hond Poster</h1>
             <p>Deze poster is gemaakt met alle letters en schetsen die gemaakt zijn in het project van <strong>Letter S</strong>. 
                 Hieruit kwam deze poster. ik heb er een gifje van gemaakt, zodat je kunt zien op welke manier deze is in en uitgevouwen.
         </div>
-                <img src="img/hond-poster/gif-hond-poster.gif" alt="hond-poster-gif">
+        <div class="container">
+            <img src="img/hond-poster/gif-hond-poster.gif" alt="hond-poster-gif">
+        </div>
     </div>
 </main>
 <footer>
