--- a/portfolio.html
+++ b/portfolio.html
@@ -20,54 +20,54 @@
   </header>
 
 <main> 
-    <article class="project">  
+    <section class="project">  
         <a href="project1.html" class="a-portfolio">
             <div class="img-overlay">
                 <img src="img/portfolio/bw-book.png" alt="bw-book">
             </div>  
         </a>
-    </article>
+    </section>
 
-    <article class="project">  
+    <section class="project">  
         <a href="eye-candy.html" class="a-portfolio">
             <div class="img-overlay">
                 <img src="img/portfolio/eye-candy.png" alt="eye-candy-project"> 
             </div>
         </a>
-    </article>
+    </section>
 
-    <article class="project">  
+    <section class="project">  
         <a href="hond-poster.html" class="a-portfolio">
             <div class="img-overlay">
                 <img src="img/portfolio/hond-poster.png" alt="hond-poster">
             </div>  
         </a>
-    </article>
+    </section>
 
-    <article class="project">  
+    <section class="project">  
         <a href="boobrandbuilders.html" class="a-portfolio">
             <div class="img-overlay">
                 <img src="img/portfolio/boo-brand-builders.png" alt="stageverslag-Boo!brandbuilders">
             </div> 
         </a>
-    </article>
+    </section>
 
-    <article class="project">  
+    <section class="project">  
         <a href="ding.html" class="a-portfolio">
             <div class="img-overlay">
                 <img src="img/ding/ding-cover.png" alt="ding">
             </div> 
         </a>
-    </article>
+    </section>
 
 
-    <article class="project">  
+    <section class="project">  
         <a href="letters.html" class="a-portfolio">
             <div class="img-overlay">
                 <img src="img/letters/cover-letter.png" alt="weekelijkse-letters">
             </div> 
         </a>
-    </article>
+    </section>
 
 </main>
 
