--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         </nav>
   </header>
 
-<main> 
+<main class="langere-pagina"> 
     <section class="project">  
         <a href="project1.html" class="a-portfolio">
             <div class="img-overlay">
