--- a/ding.html
+++ b/ding.html
@@ -16,7 +16,7 @@
             </ul>   
         </nav>
   </header>
-<main>
+<main class="hond.eye">
     <div class="achtergrond">
         <div class="tekst-container">
             <h1>Ding</h1>
