--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
 </head>
-
 <body>
   <header>
     <h1>Portfolio</h1>
@@ -19,7 +18,7 @@
         </nav>
   </header>
 
-<main class="langere-pagina"> 
+<main> 
     <section class="project">  
         <a href="project1.html" class="a-portfolio">
             <div class="img-overlay">
@@ -60,7 +59,6 @@
         </a>
     </section>
 
-
     <section class="project">  
         <a href="letters.html" class="a-portfolio">
             <div class="img-overlay">
@@ -68,9 +66,7 @@
             </div> 
         </a>
     </section>
-
 </main>
-
 <footer>
     <p>Copyright - Maaike Schoute</p>
 </footer>
