--- a/hond-poster.html
+++ b/hond-poster.html
@@ -21,7 +21,7 @@
         <div class="tekst-container">
             <h1>Hond Poster</h1>
             <p>Deze poster is gemaakt met alle letters en schetsen die gemaakt zijn in het project van <strong>Letter S</strong>. 
-                Hieruit kwam deze poster. ik heb er een gifje van gemaakt, zodat je kunt zien op welke manier deze is in en uitgevouwen.
+                Hieruit kwam deze poster. Ik heb er een gifje van gemaakt, zodat je kunt zien op welke manier deze is in en uitgevouwen.
         </div>
         <div class="container">
             <img src="img/hond-poster/gif-hond-poster.gif" alt="hond-poster-gif">
