HTML en CSS opgeruimd

--- a/boobrandbuilders.html
+++ b/boobrandbuilders.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Boo!Branduilders Stage verslag</title>
+    <title>Boo!Brandbuilders Stageverslag</title>
 </head>
 <body>
   <header>
@@ -20,8 +20,7 @@
     <div class="achtergrond">
         <div class="tekst-container">
             <h1>Boo!brandbuilders</h1>
-            <p>Dit was mijn stage verslag in het derde jaar van het Media college. In het tweede halfjaar van het derde jaar, heb ik stagegelopen bij Boo!branduilders in Wormer. Hier heb ik veel geleerd over photoshop en Wordpress. Veel leuke nieuwe mensen leren kennen en een goede ervaring eropna gehouden!
-             </p>
+            <p>Dit was mijn stageverslag in het derde jaar van het Media College. In het tweede halfjaar van het derde jaar heb ik stagegelopen bij Boo!brandbuilders in Wormer. Hier heb ik veel geleerd over Photoshop en WordPress. Veel leuke nieuwe mensen leren kennen en een goede ervaring eraan overgehouden!</p>
         </div>
         <div class="container">
             <img src="img/boobrandbuilders/00cover.png" alt="boobrand-cover">
@@ -46,15 +45,14 @@
             <img src="img/boobrandbuilders/20.png" alt="boobrand-Bergstein fotostudio">
             <img src="img/boobrandbuilders/23.png" alt="boobrand-Algemene FNV folder">
             <img src="img/boobrandbuilders/24.png" alt="boobrand-Algemene FNV folder img">
-            <img src="img/boobrandbuilders/22.png" alt="boobrand-Algemenen FNV folder img">
-            <img src="img/boobrandbuilders/22.png" alt="boobrand-Algemene FNV Folder img">    
+            <img src="img/boobrandbuilders/22.png" alt="boobrand-Algemene FNV folder img">
             <img src="img/boobrandbuilders/25.png" alt="boobrand-Desch Plantpak">
             <img src="img/boobrandbuilders/26.png" alt="boobrand-Desch Plantpak Werkwijze">
             <img src="img/boobrandbuilders/27.png" alt="boobrand-Desch Plantpak beeld">
             <img src="img/boobrandbuilders/28.png" alt="boobrand-Desch Plantpak beeld 2">
             <img src="img/boobrandbuilders/29.png" alt="boobrand-Desch Plantpak Landkaart">
             <img src="img/boobrandbuilders/30.png" alt="boobrand-Desch Plantpak Landkaart pag 2">
-            <img src="img/boobrandbuilders/31.png" alt="boobrand-Desch Plantpal Landkaart pag 3">
+            <img src="img/boobrandbuilders/31.png" alt="boobrand-Desch Plantpak Landkaart pag 3">
             <img src="img/boobrandbuilders/32.png" alt="boobrand-Conclusie verslag">
             <img src="img/boobrandbuilders/33.png" alt="boobrand-Behaalde en niet behaalde doelen + slotwoord">
             <img src="img/boobrandbuilders/34.png" alt="boobrand-Eind-schatkaart">
