--- a/eye-candy.html
+++ b/eye-candy.html
@@ -20,14 +20,16 @@
     <div class="achtergrond">
         <div class="tekst-container">
             <h1>Eye Candy</h1>
-            <p>Een groot onderdeel van Grafisch vormgeven gaat om hoe kleuren en vormen samenwerken.
+            <p>
+                Een groot onderdeel van Grafisch vormgeven gaat om hoe kleuren en vormen samenwerken.
                 Als de kleuren en vormen niet op de juiste manier worden gebruikt, zal het niet de kijkers aandacht pakken.
-                Hetzelfde geld voor koken. Als iets superlekker smaakt, maar de kleur en vorm van het gerecht ziet er niet uit, zullen mensen er niet naar uitkijken om het gerecht te proberen.
-                Wij (Britt Schwart, Maaike Schoute) waren geïteresseerd in dit aspect van koken en besloten om deze theorie om te draaien.
-                Wat als de kleuren en vormen en goed uitzien, maar gek smaken? Zouden mensen het nogsteeds willen eten?
-                Zullen mensen het proeven? Zullen mensen honger of trek krijgen bij het zien van dit eten?</p>
-            <p> Tijdens de eerste week van dit project, zijn we langs de Action gegaan om niet-eetbare materialen te verzalen voor onze 'cupcakes'.
-                Een week later zijn we naar de supermarkt gegaan om eetbare materialen te verzamelen. Met deze combinatie van eetbare, en niet eetbare materialen maakten we super lekker uitziende gerechten, met een super vieze smaak.
+                Hetzelfde geldt voor koken. Als iets superlekker smaakt, maar de kleur en vorm van het gerecht ziet er niet uit, zullen mensen er niet naar uitkijken om het gerecht te proberen.
+                Wij (Britt Schwart, Maaike Schoute) waren geïnteresseerd in dit aspect van koken en besloten om deze theorie om te draaien.
+                Wat als de kleuren en vormen er goed uitzien, maar gek smaken? Zouden mensen het nog steeds willen eten?
+                Zullen mensen het proeven? Zullen mensen honger of trek krijgen bij het zien van dit eten?
+            </p>
+            <p> Tijdens de eerste week van dit project zijn we langs de Action gegaan om niet-eetbare materialen te verzamelen voor onze 'cupcakes'.
+                Een week later zijn we naar de supermarkt gegaan om eetbare materialen te verzamelen. Met deze combinatie van eetbare en niet-eetbare materialen maakten we super lekker uitziende gerechten, met een super vieze smaak.
             </p>
         </div>
         <div class="container">
