--- a/index.html
+++ b/index.html
@@ -7,22 +7,24 @@
     <title>Home</title>
 </head>
 <body>
-  <header>
+    <header>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="winkel.html">Winkel</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
-            </ul>   
-        </nav>    
+            </ul>
+        </nav>
     </header>
     <main class="home">
         <div class="circle">
             <h1>Maaike Schoute</h1>
-            <p>Ik ben een student op de HVA voor communicatie en Miltimedia Design. 
-                Hierin staan wat werkjes van deze, en vorige opleidingen! </p>
+            <p>
+                Ik ben een student op de HVA voor communicatie en Multimedia Design. 
+                Hierin staan wat werkjes van deze, en vorige opleidingen!
+            </p>
         </div>    
-    </main>  
+    </main>
     <footer>
         <p>Copyright - Maaike Schoute</p>
     </footer>
