--- a/letters.html
+++ b/letters.html
@@ -8,34 +8,33 @@
 </head>
 <body>
     <header>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="winkel.html">Winkel</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                </ul>   
-            </nav>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="winkel.html">Winkel</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+            </ul>
+        </nav>
     </header>
-<main>
-    <div class="achtergrond">
-        <div class="tekst-container"> 
-            <h1>Letters</h1>
-            <p>Een van de opdrachten was om elke week een moeilijk woord uit te kiezen. De eerte week begonnen we met de letter A, 
-                de tweede week met de letter B etc. Hier zijn een paar letters van dit alfabtet.
-             </p>
+    <main>
+        <div class="achtergrond">
+            <div class="tekst-container">
+                <h1>Letters</h1>
+                <p>
+                    Een van de opdrachten was om elke week een moeilijk woord uit te kiezen. De eerste week begonnen we met de letter A, 
+                    de tweede week met de letter B etc. Hier zijn een paar letters van dit alfabet.
+                </p>
             </div>
-        <section class="container">
-            <img src="img/letters/letter-c.png" alt="zand en schelpen letter c">
-            <img src="img/letters/letter-e.png" alt="letter e">
-            <img src="img/letters/letter-f.png" alt="letter f">
-            <img src="img/letters/Letter-g.png" alt="letter g">
-        </section>    
-    </div>
-</main>
-
-<footer>
-    <p>Copyright - Maaike Schoute</p>
-</footer>
-
+            <section class="container">
+                <img src="img/letters/letter-c.png" alt="zand en schelpen letter c">
+                <img src="img/letters/letter-e.png" alt="letter e">
+                <img src="img/letters/letter-f.png" alt="letter f">
+                <img src="img/letters/Letter-g.png" alt="letter g">
+            </section>    
+        </div>
+    </main>
+    <footer>
+        <p>Copyright - Maaike Schoute</p>
+    </footer>
 </body>
 </html>
