--- a/hond-poster.html
+++ b/hond-poster.html
@@ -7,29 +7,31 @@
     <title>Hond-Poster</title>
 </head>
 <body>
-<header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="winkel.html">Winkel</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-        </ul>   
-    </nav>
-</header>
-<main> 
-    <div class="achtergrond">
-        <div class="tekst-container">
-            <h1>Hond Poster</h1>
-            <p>Deze poster is gemaakt met alle letters en schetsen die gemaakt zijn in het project van <strong>Letter S</strong>. 
-                Hieruit kwam deze poster. Ik heb er een gifje van gemaakt, zodat je kunt zien op welke manier deze is in en uitgevouwen.
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="winkel.html">Winkel</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+            </ul>   
+        </nav>
+    </header>
+    <main> 
+        <div class="achtergrond">
+            <div class="tekst-container">
+                <h1>Hond Poster</h1>
+                <p>
+                    Deze poster is gemaakt met alle letters en schetsen die gemaakt zijn in het project van <strong>Letter S</strong>. 
+                    Hieruit kwam deze poster. Ik heb er een gifje van gemaakt, zodat je kunt zien op welke manier deze is in en uitgevouwen.
+                </p>
+            </div>
+            <div class="container">
+                <img src="img/hond-poster/gif-hond-poster.gif" alt="hond-poster-gif">
+            </div>
         </div>
-        <div class="container">
-            <img src="img/hond-poster/gif-hond-poster.gif" alt="hond-poster-gif">
-        </div>
-    </div>
-</main>
-<footer>
-    <p>Copyright - Maaike Schoute</p>
-</footer>
+    </main>
+    <footer>
+        <p>Copyright - Maaike Schoute</p>
+    </footer>
 </body>
 </html>
