Een section veranderd naar Div

--- a/letters.html
+++ b/letters.html
@@ -25,12 +25,12 @@
                     de tweede week met de letter B etc. Hier zijn een paar letters van dit alfabet.
                 </p>
             </div>
-            <section class="container">
+            <div class="container">
                 <img src="img/letters/letter-c.png" alt="zand en schelpen letter c">
                 <img src="img/letters/letter-e.png" alt="letter e">
                 <img src="img/letters/letter-f.png" alt="letter f">
                 <img src="img/letters/Letter-g.png" alt="letter g">
-            </section>    
+            </div>    
         </div>
     </main>
     <footer>
