--- a/ding.html
+++ b/ding.html
@@ -7,7 +7,7 @@
     <title>Ding</title>
 </head>
 <body>
-  <header>
+    <header>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -15,19 +15,20 @@
                 <li><a href="portfolio.html">Portfolio</a></li>
             </ul>   
         </nav>
-  </header>
-<main class="hond.eye">
-    <div class="achtergrond">
-        <div class="tekst-container">
-            <h1>Ding</h1>
-            <p>Dit heet ding, omdat ik niet meer weet hoe deze techniek van drukwerk heet. Het is gemaakt van kleuren, met uitgeknipte cirkels, vierkantjes en andere figuren. Deze worden op willekeurige manier op gevouwen papier geplaats, en gaan dan door een grote roller. Hierdoor plakken de geverfde figuren aan het papier, en krijg je een effect als deze. het is ook leuk om dit te zien als je het papier uitvouwd.
-            </p>
-        </div>
+    </header>
+    <main>
+        <div class="achtergrond">
+            <div class="tekst-container">
+                <h1>Ding</h1>
+                <p>
+                    Dit heet 'ding' omdat ik niet meer weet hoe deze techniek van drukwerk heet.
+                </p>
+            </div>
             <img src="img/ding/ding.png" alt="ding">
-    </div>
-</main>
-<footer>
-    <p>Copyright - Maaike Schoute</p>
-</footer>
+        </div>
+    </main>
+    <footer>
+        <p>Copyright - Maaike Schoute</p>
+    </footer>
 </body>
 </html>
